--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.ribbon.RibbonFragment">
+    tools:context=".ui.fragment.ribbon.NewsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        tools:listitem="@layout/item_rb"
         android:id="@+id/rv_rb"
+        android:layout_width="@dimen/zero"
+        android:layout_height="@dimen/zero"
+        android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="@dimen/zero"
-        android:layout_height="@dimen/zero"/>
+        tools:listitem="@layout/item_rb" />
+
+    <include layout="@layout/part_result" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
