--- a/app/src/main/res/navigation/main.xml
+++ b/app/src/main/res/navigation/main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/newsFragment"
-        android:name="com.siroca.twiceapp.ui.fragment.ribbon.NewsFragment"
+        android:name="com.siroca.twiceapp.ui.fragment.news.NewsFragment"
         android:label="@string/ribbon"
         tools:layout="@layout/fragment_news" />
     <fragment
