--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,10 @@
     <dimen name="sixty_four">64dp</dimen>
     <dimen name="ten_sp">10sp</dimen>
     <dimen name="one_hundred">100dp</dimen>
+    <dimen name="three_two_zero">320dp</dimen>
+    <dimen name="eighty">80dp</dimen>
+    <dimen name="two_four_zero">240dp</dimen>
+    <dimen name="two_hundred">200dp</dimen>
+    <dimen name="forty_six">46dp</dimen>
+    <dimen name="fifty_four">54dp</dimen>
 </resources>
