--- a/app/src/main/res/layout/item_participants.xml
+++ b/app/src/main/res/layout/item_participants.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="@dimen/one_hundred"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp"
-    >
+    android:layout_margin="16dp">
 
     <ImageView
         android:id="@+id/img_part"
